--- a/CSS/pseudoelementS.html
+++ b/CSS/pseudoelementS.html
@@ -22,7 +22,7 @@
         }
 
         h2::before{
-            content: url(https://example.com/path-to-your-image.png);
+            content: url('https://example.com/path-to-your-image.png');
             content: "★ ";
             width: 50px;
             height:50px;
