--- a/CSS/positioning.html
+++ b/CSS/positioning.html
@@ -45,3 +45,7 @@
     </div>
 </body>
 </html>
+
+<!--5. Sticky:An element with position: sticky; 
+is positioned based on the user’s scroll position.A sticky element toggles between relative and fixed, 
+depending on the scroll position.-->
