--- a/javascript/formvalidation/lengthrestriction.html
+++ b/javascript/formvalidation/lengthrestriction.html
@@ -13,7 +13,7 @@
         var  minlen=7;
         var maxlen=30;
         var input = document.getElementById("myInput").value;
-        if(input.length>=minlen && input.length<30){
+        if(input.length>=minlen || input.length<30){
             alert("valid entry");
         }
         else{
