--- a/CSS/background.html
+++ b/CSS/background.html
@@ -11,11 +11,10 @@
         background-image: url('https://www.shutterstock.com/image-vector/draft-sign-square-grunge-black-260nw-1552567685.jpg');
         background-repeat: repeat-x;
         /*if there's b-repeat the immage repeates through the page. 
-        if repeat-x then repetaed only horizontally and if repeat-y repeat vertically only.*/
+        if repeat-x then repeated only horizontally and if repeat-y repeat vertically only.*/
         background-repeat: no-repeat;  /*image is shown only once*/
-        background-position: right top; /*pos of image is specified so it doesn't disturb text.*/
-        background-attachment: fixed; /*the image will be fixed aand won't scroll w rest of page. */
-        background-attachment: scroll; /*image scrolls w rest of page*/
+        background-position:right top; /*pos of image is specified so it doesn't disturb text.*/
+        background-attachment: fixed;/*wont scroll w rest of the page. or use scroll*/
         background-attachment: local; /*bg scrolls within the elements content*/
         background-size: cover; /*image will be shown in full size*/
 
@@ -25,8 +24,8 @@
     </style>
 </head>
 <body>
-    <p>background image/color fills the element's content area
-        
+    <p style ="font-size: xx-large;">background image/color fills the element's content area
+       
     </p>
 </body>
 </html>
