--- a/CSS/list.html
+++ b/CSS/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul style="list-style-type:default; list-style-position: none;">
-        <li>default is filled in circle</li>
+        <li>default is filled in disc</li>
         <li>without position style all this will be in same start pos </li>
 
     </ul>
@@ -31,7 +31,7 @@
     </ol>
     <ol style="list-style-type: lower-greek; padding-left:50px;">
         <li>alpha, greek,gamma natak</li>
-        <li>alpha bhaneko abc wala ani greek chai roman</li>
+        <li>alpha bhaneko abc wala ani gamma chai roman</li>
     </ol>
     <!--we can specify all list properties into a single expression-->
     <ul style="list-style: square inside; padding:50px;">
