--- a/CSS/positioning.html
+++ b/CSS/positioning.html
@@ -14,12 +14,12 @@
     div.relative{
         position: relative;
         left:20px; /*can only use left and top value*/
-        top:30px;
+        top:50px;
         border:1px dotted blue;
     }
     div.absolute{
         position: absolute; 
-        left:50px;
+        left:90px;
         top:50px;
     }
     div.fixed{
@@ -35,7 +35,8 @@
     </div>
     <div class="relative">
         <p>Setting the top, right, bottom, and left properties of a relatively-positioned element will cause it to be adjusted away from its normal position.
-              Other content will not be adjusted to fit into any gap left by the element. also whole border ko position ho.</p>
+              Other content will not be adjusted to fit into any gap left by the element. also whole border ko position ho. latest kura bata ko pos bhayo
+            absolute le chai mathi top left batai hercha</p>
     </div>
     <div class="absolute">
         <p>absolute is positioned at the specifies coordinates relative to your screen top left corner</p>
