--- a/CSS/text.html
+++ b/CSS/text.html
@@ -31,7 +31,7 @@
     }
     p.letter-spacing{
         letter-spacing: 10px; /*increase space between letters*/
-        letter-spacing: -2px;;
+        letter-spacing: -2px;
     }
     p.word-spacing{
         word-spacing: 5px;
