--- a/HTML/canvascircle.html
+++ b/HTML/canvascircle.html
@@ -11,12 +11,14 @@
         canvas{
         border: 1px solid black;
         margin:20px;
-        align-items: center;
+        
         }
     </style>
 </head>
 <body>
-    <canvas id="mycanvas" height="200" width="400"></canvas>
+    <canvas id="mycanvas" height="200" width="400">
+        your browser doesnot support the html5 canvas tag
+    </canvas>
     <script>
        // gets the canvas element
         const canvas=document.getElementById('mycanvas');
