--- a/HTML/form_otherinputtype.html
+++ b/HTML/form_otherinputtype.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COLOR,DATE,EMAIL,IMAGE,FILEUPLOAD</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
 
         <h3>Number input type</h3>
         <label for="quantity">enter a number between 1 and 5:</label>
-        <input type="number" id="quantity" number="quantity" min="1" max="5">
+        <input type="number" id="quantity" min="1" max="5">
         
 
         
