--- a/HTML/form_textinput.html
+++ b/HTML/form_textinput.html
@@ -13,7 +13,7 @@
 
         <!--or use label-->
         <label for="fname">First name:</label> 
-        <input type="text" id="fname" name="fname"> 
+        <input type="text" id="fname" name="fname" value="what"> 
 
         <br>
         <br>
@@ -32,7 +32,7 @@
     </form>
 
     <h3>multi-line input controls</h3>
-    <!--defines multi line inpul field useing <textarea>-->
+    <!--defines multi line input field using <textarea>-->
         <form>
         <textarea name="message" rows="10" cols="30"> Enter a description here.... 
             </textarea>
