--- a/HTML/formatting_tags.html
+++ b/HTML/formatting_tags.html
@@ -8,7 +8,7 @@
     <p><b>this tag is used to bold the text</b></p> <!--physical tag:provide visual appearance to text-->
     <p>I have <strong> dark green</strong> eyes</p> <!--logical tag:adds logical value to the text-->
     <p><i>this physical tag is used to italic the text</i></p>
-    <p><em>this logical tag dispalys content in italic</em></p>
+    <p><em>this logical tag displays content in italic</em></p>
     <p><small>this tag defines smaller text other than other tag.</small></p>
     <p>this increases font size by <big>one conventional unit</big></p>
     <p>this text contains <sup>superscript</sup> text</p>
