--- a/HTML/headings.html
+++ b/HTML/headings.html
@@ -12,6 +12,12 @@
     <h4> this is heading with h4 tag</h4>
     <h5> this is heading with h5 tag</h5>
     <h6> this is smallest text heading </h6>
+
+
+    only adds single white space between two words 10 &nbsp;gm <br>
+    only adds two white space between two words 10 &ensp;gm <br>
+    onyl adds four white space between two words 10 &emsp;gm
     
 </body>
+<p></p>
 </html>
