--- a/HTML/paragraphs.html
+++ b/HTML/paragraphs.html
@@ -15,6 +15,9 @@
         preserves both white spaces
     and line breaks </pre>
 
+    <hr> lets see
+   
+
     <p> <a href= "https://hamrocsit.com/note/web-tech/hyper-text-markup-language/"> see the output </a></p>  <!--<a> tag defines hyperlink.-->
 
     <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s" alt="if image can't be displayed it is alternate text" width="42" height="42" />
