--- a/Questions/2076(3).html
+++ b/Questions/2076(3).html
@@ -11,6 +11,7 @@
         position:fixed;
         border-style:solid;
         border:2px solid black/*can write width instead of border apparently*/
+        border-width:2px;
     }
     #p1{
         position: relative;
