--- a/XML/XMLhttp.html
+++ b/XML/XMLhttp.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div id="demo"></div>
+    <div id="demo">
         <h1>Data from Server. get method</h1>
         <button type="button" onclick="loaddoc()">change content</button>
     </div>    <!--div bhitra yo sab rakhda result next page ma aucha. nabhaye tei mathi dekhaucha-->
