--- a/javascript/DOM.html
+++ b/javascript/DOM.html
@@ -93,6 +93,7 @@
             document.getElementById("id").innerHTML=data;  //yaha bata data ko tyo 
 
             document.getElementById('id').innerHTML="is set to a new string, which replaces the original content.";
+            //yo nabhaye tyo data dekhaune
         }
       </script>
       <form>
