--- a/javascript/essentials.html
+++ b/javascript/essentials.html
@@ -22,7 +22,7 @@
 <h2>javascript statements</h2>
 <p id="demo"></p>
 <script>
-    document.getElementById("demo").innerHTML="This example shows that that the statement inside the script tag tells browser to display this to that place of html element that uses id=demo"
+    document.getElementById("demo").innerHTML="This example shows that that the statement inside the script tells browser to display this to that place of html element that uses id=demo"
 </script>
 <!--javascript block-->
 <script>
