--- a/javascript/functions.html
+++ b/javascript/functions.html
@@ -23,8 +23,7 @@
         return full;
     }
     function printsname(){
-        var result;
-        result=concatenatename("John"," Doe");
+        var result=concatenatename("John"," Doe");
         document.writeln(result);
     }
     printsname();
