--- a/javascript/getelementbytagname.html
+++ b/javascript/getelementbytagname.html
@@ -17,11 +17,11 @@
         // Access and display <h1> elements
         const headings = document.getElementsByTagName("h1");
         document.write("<h2>H1 Elements:</h2>");
-        document.write("<ul>");
+       
         for (let i = 0; i < headings.length; i++) {
-            document.write("<li>" + headings[i].innerText + "</li>");
+            document.write( headings[i].innerText );
         }
-        document.write("</ul>");
+        
 
         // Access and display <p> elements
         const paragraphs = document.getElementsByTagName("p");
