--- a/javascript/jquery.html
+++ b/javascript/jquery.html
@@ -57,10 +57,9 @@
     $("p").hover(
         function(){
                  $(this).css("background-color", "yellow");
-        },
-         function(){
-                $(this).css("background-color", "");   //this selects current element
+           //this selects current element
          });
+        
     
      $("#append").click(function(){
         $("p").append("<span> Appended Text</span>");
