--- a/CSS/table.html
+++ b/CSS/table.html
@@ -7,6 +7,7 @@
 
     <style>
         table.one{
+            border:1px solid black;
             border-collapse: collapse;
             height:70px;
             width:50%;
@@ -35,7 +36,7 @@
         <caption>border collapse</caption>
         <tr>
             <td class ="a">cell A collapse</td>
-            <td class="a">lets see</td>
+            <td>lets see</td>
             <td class="b">all in same row</td>
         </tr>
         <tr>
@@ -52,7 +53,7 @@
         </tr>
         <tr>
             <td class="b">seperate</td>
-            <td class="a">seperate</td>
+            <td>seperate</td>
         </tr>
 
     </table>
