--- a/HTML/lists.html
+++ b/HTML/lists.html
@@ -32,6 +32,7 @@
     </ol>
     <ol type ="a"> <!--lowercase letters-->
         <li>COFFEE</li>
+        <li>see</li>
     </ol>
     <ol type="i"> <!--lowercase roman no.-->
         <li>COFFEE</li>
@@ -52,18 +53,18 @@
 <br>
 
     <h2>nested list: a list inside another list</h2>
-    <ol>
+    <ol start="5">
         <li>Country</li>
-    <ul>
+    <ul type="circle">
         <li>Nepal</li>
         <li>India</li>
         <li>china</li>
     </ul>
     <li>Food</li>
-    <ul>
+    <ol>
         <li>momo</li>
         <li>chowmein</li>
-    </ul>
+    </ol>
     </ol>
 <br>
     <h2>Control list</h2>
